# sslpack

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_example.ipynb  custom_example.py  example.ipynb  transform_example.ipynb
sslpack/algorithms/: __init__.py  dash.py  fixmatch.py  flexmatch.py  freematch.py  pseudolabel.py  supervised.py
sslpack/algorithms/utils/: __init__.py  distribution_alignment.py  mask.py
sslpack/datasets/: __init__.py  dataset.py  ssl_dataset.py
sslpack/datasets/cv_datasets/: __init__.py  cifar.py  medmnist.py  mnist.py
sslpack/networks/: utils.py
sslpack/networks/vision_transfomers/: vision_transformer.py
sslpack/networks/wide_resnets/: wide_res_net.py
sslpack/utils/augmentation/: __init__.py  randaugment.py  randaugmentv2.py
sslpack/utils/criterions/: __init__.py  consistency_loss.py
sslpack/utils/data/: __init__.py  data_utils.py  dataloader.py  dataset.py
sslpack/utils/ema/: __init__.py
sslpack/utils/schedulers/: __init__.py
wslearn/algorithms/: __init__.py  fixmatch.py  pseudolabel.py  ssl_algorithm.py  utils.py
wslearn/datasets/: __init__.py  dataset.py
wslearn/datasets/cv_datasets/: __init__.py  cifar.py  mnist.py
wslearn/networks/: utils.py  vision_transformer.py
wslearn/networks/vision_transfomers/: __init__.py  vision_transformer.py
wslearn/networks/wide_resnets/: __init__.py  wide_res_net.py
wslearn/utils/augmentation/: randaugment.py
wslearn/utils/criterions/: __init__.py  consistency_loss.py
wslearn/utils/data/: __init__.py  dataset.py  (+2 more)
(+4 files in other folders)
